--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,29 @@
         <item>D</item>
     </string-array>
     <string name="select_floor">Select Floor</string>
+    <string name="title_activity_login">LoginActivity</string>
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="welcome">"Welcome !"</string>
+    <string name="invalid_username">Not a valid username</string>
+    <string name="invalid_password">Password must be >5 characters</string>
+    <string name="login_failed">"Login failed"</string>
+    <string-array name="faculties">
+        <item>Select Faculty..</item>
+        <item>Engineering</item>
+        <item>Medicine</item>
+        <item>Nature Science</item>
+        <item>Health Science</item>
+        <item>Humanities and Social Science</item>
+    </string-array>
+    <string-array name="reasons">
+        <item>Other..</item>
+        <item>Lecture</item>
+        <item>Practice</item>
+        <item>Marathon</item>
+        <item>Test</item>
+        <item>Social Activity</item>
+    </string-array>
 </resources>
